cmake_minimum_required(VERSION 3.20)

project(
    dvn
    VERSION 0.0.1
    LANGUAGES CXX
)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON CACHE INTERNAL "")
set(CMAKE_C_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_C_IMPLICIT_INCLUDE_DIRECTORIES})

set(RAYLIB_PATH "${CMAKE_CURRENT_SOURCE_DIR}/raylib")

add_subdirectory(src dvn)
